<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@+id/reset_password_header" android:background="@color/green" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/tv_cancel" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="?android:attr/textAppearanceMedium" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/tv_header_title" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_password" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:attr/textAppearanceMedium" />
        <TextView android:textSize="18.0sp" android:textColor="@color/light_gray" android:id="@+id/tv_save" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_write_email" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/reset_password_header">
        <TextView android:textSize="15.0sp" android:textColor="@color/green" android:gravity="center_horizontal" android:id="@+id/tv_enter_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="@string/enter_email" />
        <EditText android:textSize="15.0sp" android:textColor="#ffababab" android:gravity="center" android:id="@+id/edit_email_value" android:background="@android:color/transparent" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:singleLine="true" android:layout_below="@id/tv_enter_email" android:inputType="textEmailAddress" />
        <View android:id="@id/line" android:background="@color/gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/edit_email_value" />
    </RelativeLayout>
    <RelativeLayout android:orientation="horizontal" android:id="@+id/reset_password_headers" android:background="@color/green" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/tv_cancels" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="?android:attr/textAppearanceMedium" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/tv_header_titles" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_password" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:attr/textAppearanceMedium" />
        <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/tv_saves" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/next" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/rl_enter_code" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/rl_write_email">
        <ImageView android:id="@+id/img_email" android:background="@drawable/reset_password_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:layout_above="@+id/tv_center_note" android:layout_centerHorizontal="true" />
        <TextView android:textSize="25.0sp" android:textColor="#ff929292" android:id="@+id/tv_center_note" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/check_email" android:layout_centerInParent="true" />
        <TextView android:textSize="15.0sp" android:textColor="#ffababab" android:gravity="center" android:id="@+id/tv_gotoemail_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="20.0dip" android:text="We have sent an email to you at android@neuron.com. It has a magical code  that will sign you in." android:layout_below="@id/tv_center_note" android:layout_centerHorizontal="true" />
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@+id/btn_enter" android:background="@drawable/green_button_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="32.0dip" android:text="@string/enter_code" android:layout_below="@id/tv_gotoemail_msg" />
    </RelativeLayout>
    <RelativeLayout android:gravity="left" android:id="@+id/rl_verification" android:background="@color/white" android:padding="13.0sp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/reset_password_headers" android:layout_alignParentLeft="true">
        <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:id="@+id/textview_verification_resetpassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="13.0sp" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:text="@string/verification" />
        <EditText android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ffbbbbbb" android:id="@+id/edittext_verification_resetpasword" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="13.0sp" android:hint="***********" android:layout_below="@id/textview_verification_resetpassword" android:inputType="textPassword" />
        <RelativeLayout android:id="@+id/relativelayout_horizontal" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/edittext_verification_resetpasword" />
        <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:id="@+id/textview_new_resetpassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="13.0sp" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:text="@string/new_password" android:layout_below="@+id/relativelayout_horizontal" />
        <EditText android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ffbbbbbb" android:id="@+id/edittext_new_resetpasword" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="13.0sp" android:hint="***********" android:layout_below="@id/textview_new_resetpassword" android:inputType="textPassword" />
        <RelativeLayout android:id="@+id/relativelayout_horizontals" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/edittext_new_resetpasword" />
        <TextView android:textSize="13.0sp" android:textColor="#ff000000" android:id="@+id/textview_confirm_resetpassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="13.0sp" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:text="@string/confirm" android:layout_below="@id/relativelayout_horizontals" />
        <EditText android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ffbbbbbb" android:id="@+id/edittext_confirm_resetpasword" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginRight="18.0dip" android:layout_marginBottom="13.0sp" android:hint="***********" android:layout_below="@id/textview_confirm_resetpassword" android:inputType="textPassword" />
        <RelativeLayout android:id="@+id/relativelayout_horizontalss" android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/edittext_confirm_resetpasword" />
    </RelativeLayout>
</RelativeLayout>