<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/splash_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@+id/tool_bar" android:layout_width="fill_parent" android:layout_height="1.0sp" layout="@layout/tool_bar" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@+id/imageview_drivers_log" android:paddingLeft="30.0dip" android:paddingTop="30.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="25.0sp" android:src="@drawable/splash_logo" android:layout_above="@+id/relativelayout_drivers_login" android:layout_alignParentTop="true"
            android:contentDescription="" />
        <RelativeLayout android:id="@+id/relativelayout_drivers_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@+id/relativelayout_drivers">
            <EditText android:textSize="18.0sp" android:textColorHint="@color/gray" android:id="@+id/edit_username" android:background="@drawable/edit_background" android:padding="11.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0sp" android:layout_marginTop="25.0sp" android:layout_marginRight="32.0sp" android:hint="Email Address" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:inputType="textEmailAddress|textNoSuggestions" />
            <EditText android:textSize="18.0sp" android:textColorHint="@color/gray" android:id="@+id/edit_passwords" android:background="@drawable/edit_background" android:padding="11.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0sp" android:layout_marginTop="12.0sp" android:layout_marginRight="32.0sp" android:hint="@string/loginpassword" android:layout_below="@id/edit_username" android:layout_centerHorizontal="true" android:inputType="textNoSuggestions|textPassword" />
            <TextView android:textSize="14.0sp" android:textColor="@color/selected" android:textColorHint="@color/selected" android:id="@+id/forgot_passwords" android:padding="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgotpassword" android:layout_below="@id/edit_passwords" android:layout_centerHorizontal="true" android:visibility="invisible" />
            <TextView android:textSize="18.0sp" android:textColor="@color/selected" android:gravity="center" android:id="@+id/textview_drivers_login" android:background="@drawable/green_button_selector" android:padding="11.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0sp" android:layout_marginRight="32.0sp" android:text="@string/invalidtoken" android:layout_below="@id/forgot_passwords" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/relativelayout_drivers" android:layout_width="fill_parent" android:layout_height="52.0sp" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>