<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="13.0sp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/relativelayout_drivers" android:paddingRight="5.0dip" android:paddingBottom="2.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@+id/image_layout" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
            <ImageView android:id="@+id/imagestores" android:padding="1.0sp" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_margin="1.0sp" android:src="@drawable/default_store_icon" />
        </LinearLayout>
        <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0sp" android:layout_toRightOf="@id/image_layout" android:layout_centerInParent="true">
            <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@+id/store_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/storenames"
                android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
                android:maxLines="1" />
            <TextView android:textSize="12.0sp" android:textColor="#ffb2b2b2" android:gravity="center" android:id="@+id/date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/date" android:drawableLeft="@drawable/clock_icon" android:drawablePadding="5.0sp" android:layout_below="@id/store_name" android:layout_centerVertical="true" />
            <TextView android:textSize="12.0sp" android:textColor="#ffb2b2b2" android:id="@+id/ordersnumbers" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/ordersnumbers" android:layout_below="@id/date" />
        </RelativeLayout>
        <RelativeLayout android:id="@+id/relstivelayout_drivers_ticks" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
            <ImageView android:id="@+id/imageview_drivers_corrects" android:visibility="invisible" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="1.0sp" android:layout_marginBottom="5.0sp" android:src="@drawable/tick_icon" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_centerVertical="true"
                android:contentDescription="" />
            <ImageView android:id="@+id/imageview_drivers_cross" android:visibility="gone" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="5.0sp" android:layout_marginBottom="5.0sp" android:src="@drawable/cross_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/relativelayout_drivers_names" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0sp" android:layout_below="@id/relativelayout_drivers">
        <TextView android:textSize="11.0sp" android:textColor="#ff9d9d9d" android:id="@+id/textview_drivers_customers" android:padding="6.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Customers : " />
        <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:gravity="center_horizontal" android:id="@+id/textview_drivers_customes" android:paddingTop="5.0sp" android:paddingBottom="5.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0sp" android:text="@string/JackmanPollack"
            android:layout_toRightOf="@id/textview_drivers_customers"
            android:maxLines="1" />
        <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:id="@+id/textview_drivers_contacts" android:paddingLeft="11.0sp" android:paddingRight="11.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999" android:drawableLeft="@drawable/phone_icon" android:drawablePadding="5.0sp" android:layout_below="@id/textview_drivers_customes" />
    </RelativeLayout>
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@+id/textview_drivers_completes" android:background="@drawable/completes" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="7.0sp" android:text="@string/completes" android:layout_below="@+id/textview_drivers_sources" />
    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff54d582" android:id="@+id/textview_drivers_reviews" android:background="@drawable/rectangles" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0sp" android:layout_marginRight="5.0sp" android:text="@string/revieworders" android:layout_toRightOf="@id/textview_drivers_completes" android:layout_below="@+id/textview_drivers_sources" />
    <RelativeLayout android:id="@+id/relativelayout_drivers_das" android:paddingTop="11.0sp" android:paddingBottom="11.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="11.0sp" android:layout_marginTop="11.0sp" android:layout_marginRight="11.0sp" android:layout_below="@id/relativelayout_drivers_names">
        <ImageButton android:id="@+id/textview_drivers_gres" android:background="@color/transy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/distance_gray_dot" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:id="@+id/textview_drivers_lines" android:background="@drawable/dot_line" android:padding="5.0sp" android:layout_width="wrap_content" android:layout_height="1.0sp" android:layout_centerInParent="true" />
        <ImageButton android:id="@+id/textview_drivers_greens" android:background="@color/transy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/distance_green_dot" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="11.0sp" android:textColor="#ff54d581" android:gravity="center_vertical" android:id="@+id/textview_drivers_miles" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="xx miles" android:layout_below="@id/relativelayout_drivers_names" android:layout_centerHorizontal="true" />
    <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:id="@+id/textview_drivers_sources" android:padding="5.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0sp" android:layout_marginRight="11.0sp" android:layout_marginBottom="5.0sp" android:text="Sources" android:layout_toLeftOf="@id/textview_drivers_miles" android:layout_below="@id/relativelayout_drivers_das" android:layout_alignParentLeft="true" />
    <TextView android:textSize="11.0sp" android:textColor="#ff000000" android:gravity="right" android:id="@+id/textview_drivers_destinations" android:padding="5.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0sp" android:layout_marginRight="7.0sp" android:text="Destinations" android:layout_toRightOf="@id/textview_drivers_miles" android:layout_below="@id/relativelayout_drivers_das" android:layout_alignParentRight="true" />
    <View android:id="@+id/views" android:layout_width="fill_parent" android:layout_height="11.0sp" android:layout_below="@id/textview_drivers_reviews" android:layout_alignParentBottom="true" />
</RelativeLayout>